# tne-education-assessment

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_email_verification.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/ai/: claude_client.py
backend/app/ai/documents/: classifier.py  completeness.py  extractor.py  pipeline.py
backend/app/ai/predictive/: rule_based.py
backend/app/ai/prompts/: document_intelligence.py  report_sections.py  scoring_text.py
backend/app/ai/reports/: orchestrator.py  pdf_renderer.py  sections.py
backend/app/ai/scoring/: binary.py  consistency.py  numeric.py  orchestrator.py  text.py  timeseries.py
backend/app/api/v1/: admin.py  assessments.py  auth.py  benchmarks.py  files.py  jobs.py  reports.py  responses.py  scoring.py  tenants.py  users.py
backend/app/middleware/: tenant.py
backend/app/models/: __init__.py  ai_job.py  assessment.py  benchmark.py  file_upload.py  report.py  scoring.py  tenant.py  user.py
backend/app/schemas/: __init__.py  ai_job.py  assessment.py  auth.py  benchmark.py  file.py  report.py  scoring.py  tenant.py  user.py
backend/app/services/: assessment_service.py  benchmark_service.py  calculation_service.py  email_service.py  report_service.py  scoring_service.py  token_service.py
backend/app/templates/email/: base.html  magic_link.html  (+1 more)
backend/app/workers/: celery_app.py  tasks.py
(+156 files in other folders)
